--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,19 @@
 body {
     background-color: black;
+    margin: 0;
+    padding: 0;
+    
+}
+/* Estilos home */
+#homeContainer{
     color: #fff;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    background: url('./images/cover-home.jpg') no-repeat center;
+    background-size: cover;
+    margin: 0;
+    padding: 0;
+
 }
